# cuda-stream-compaction

./: CMakeLists.txt  run-commands.sh  run.sh
src/: main.cpp  prefixScanCpu.cpp  prefixScanCpu.hpp  prefixScanGpu.cu  prefixScanGpu.cuh  test.cpp  test.hpp  utils.cpp  utils.hpp
